[package]
name = "arrow"
version = "0.1.0"
authors = ["GreatGodOfFire <greatgodoffire@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.4", features = ["full"] } 
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"

toml = "0.5"
uuid = { version = "0.8", features = ["v3", "serde"] }
