[package]
name = "arrow-codec"
version = "0.1.0"
authors = ["GreatGodOfFire <greatgodoffire@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
arrow-protocol = { path = "../arrow-protocol" }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }

