[package]
name = "arrow"
version = "0.1.0"
authors = ["GreatGodOfFire <greatgodoffire@protonmail.com>", "michihupf <michihupf@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-net = { path = "../arrow-net" }
tokio = { version = "1.6", features = ["full"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
toml = "0.5"
